deps/v8/test/message/fail/weak-refs-unregister.out
*%(basename)s:8: TypeError: unregisterToken ('1') must be an object
fg.unregister(1);
   ^
TypeError: unregisterToken ('1') must be an object
    at FinalizationGroup.unregister (<anonymous>)
    at *%(basename)s:8:4
